<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nombreTareaDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_de_la_tarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descripcionTarea"
        android:layout_width="300dp"
        android:layout_height="145dp"
        android:layout_marginTop="144dp"
        android:text="@string/descripcion_de_la_tarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTareaDetail" />

    <TextView
        android:id="@+id/fechaEntrega"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="52dp"
        android:text="@string/fecha_de_entrega"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTareaDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>