<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputNombreAsignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/nombre_de_la_tarea"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputDescripcionTarea"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/descripcion_de_la_tarea"
        android:importantForAutofill="no"
        android:inputType="textImeMultiLine"
        android:maxLength="200"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNombreAsignatura" />

    <EditText
        android:id="@+id/inputFechaTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/fecha_de_entrega"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescripcionTarea"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/aceptarTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/aceptar"
        android:textColor="#37474F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFechaTarea" />
</androidx.constraintlayout.widget.ConstraintLayout>